add site keywords

--- a/themes/hugo-theme-bootstrap/layouts/partials/head.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/head.html
@@ -1,4 +1,5 @@
 {{- partial "head/favicons" . -}}
+<meta name="keywords" content="{{if .IsHome}}{{ $.Site.Params.keywords}}{{else}}{{.Keywords}}{{end}}">
 <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}" />
 {{- template "_internal/schema.html" . -}}
 {{ template "_internal/opengraph.html" . }}
