open search form for pc

--- a/themes/hugo-theme-bootstrap/layouts/partials/header/navbar.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/header/navbar.html
@@ -12,9 +12,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- <ul class="navbar-nav me-1 mb-2 mb-lg-0">
+      <ul class="navbar-nav me-1 mb-2 mb-lg-0">
         {{- partial "header/search-bar" . -}}
-      </ul> -->
+      </ul>
       {{- $menusPosition := default "right" .Site.Params.menusPosition  -}}
       <ul class="navbar-nav me-1 mb-2 mb-lg-0 me-1 {{ index $menusPositions $menusPosition }}">
         {{- $currentPage := . -}}
