--- a/themes/hugo-theme-bootstrap/layouts/_default/single.html
+++ b/themes/hugo-theme-bootstrap/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <div class="col-lg-8">
-  <div class="container">
+  <div class="container content-post">
     {{- partial "breadcrumb" . -}}
     {{- partial "post" . -}}
   </div>
