--- a/themes/hugo-theme-bootstrap/layouts/partials/head/custom.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/head/custom.html
@@ -8,3 +8,12 @@
 <script src="{{ absURL . }}" crossorigin="anonymous"></script>
 {{- end -}}
 {{- end -}}
+
+{{ $css := .Resources.Match "**.css"}}
+{{ $js := .Resources.Match "**.js"}}
+{{ range $css }}
+<link rel="stylesheet" href="{{ absURL . }}" crossorigin="anonymous">
+{{ end }}
+{{- range $js -}}
+<script src="{{ absURL . }}" crossorigin="anonymous"></script>
+{{- end -}}
