--- a/themes/hugo-theme-bootstrap/layouts/partials/ext.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/ext.html
@@ -1,7 +1,6 @@
-<div class="tools-content">
-    {{- partial "post/toolbox" . -}}
+<div>
     {{- .Content -}}
 </div>
-<div class="tools-comment">
+<div>
   {{- partial "post/comments" . -}}
 </div>
