--- a/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
+++ b/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
@@ -1,4 +1,4 @@
-{{- $currentPage := .Get 0 -}}
+{{- $currentPage := absLangURL (.Get 0) -}}
 {{- range .Site.Menus.main -}}
     {{- if .HasChildren -}}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
