--- a/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
+++ b/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
@@ -1,7 +1,7 @@
 {{- $currentPage := absLangURL (.Get 0) -}}
 {{- range .Site.Menus.main -}}
     {{- if .HasChildren -}}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-surface">
         <div class="container-fluid">
             <div class="navbar-collapse">        
             {{- range .Children -}}
