--- a/themes/hugo-theme-bootstrap/src/scss/_form.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_form.scss
@@ -2,3 +2,16 @@
   background-color: var(--hbs-accent);
   border-color: var(--hbs-accent);
 }
+
+
+.t-editarea {
+  .form-control {
+    background-color: var(--hbs-surface);
+    color: var(--hbs-secondary-text);
+    border-color: var(--hbs-accent);
+  
+    &:focus {
+      color: var(--hbs-primary-text);
+    }
+  }
+}
