--- a/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
+++ b/themes/hugo-theme-bootstrap/layouts/shortcodes/navmain.html
@@ -1,18 +1,10 @@
 {{- $currentPage := absLangURL (.Get 0) -}}
 {{- range .Site.Menus.main -}}
     {{- if .HasChildren -}}
-    <nav class="navbar navbar-expand-lg navbar-surface">
-        <div class="container-fluid">
-            <div class="navbar-collapse">        
-            {{- range .Children -}}
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link {{ if eq $currentPage (absLangURL .URL) }} active{{ end }}" aria-current="page" href="{{ absLangURL .URL }}">{{- .Name -}}</a>
-                </li>
-            </ul>
-            {{- end -}}
-            </div>
-        </div>
-    </nav>
+    <div class="navbar-surface clearfix">
+        {{- range .Children -}}
+        <a class="{{ if eq $currentPage (absLangURL .URL) }}active{{ end }} d-block float-start p-2" href="{{ absLangURL .URL }}">{{- .Name -}}</a>
+        {{- end -}}
+    </div>
     {{- end -}}
 {{- end -}}
