--- a/themes/hugo-theme-bootstrap/src/scss/_navmain.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_navmain.scss
@@ -1,10 +1,12 @@
 .navbar-surface {
     background-color: var(--hbs-surface);
     color: var(--hbs-secondary-text);
-}
-.navbar-surface a.active {
-    color: var(--hbs-on-surface)!important;
-}
-.navbar-surface .nav-link:not(.active):hover {
-    color: var(--hbs-on-surface);
+    margin-top: -20px;
+    a.active {
+        color: var(--hbs-on-surface)!important;
+    }
+
+    a:not(.active):hover {
+        color: var(--hbs-on-surface);
+    }
 }
