--- a/themes/hugo-theme-bootstrap/src/scss/_main.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_main.scss
@@ -40,6 +40,13 @@ a {
   }
 }
 
+a.show-link {
+  color: var(--hbs-accent);
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
 btn,
 .btn {
   background-color: var(--hbs-accent);
