--- a/themes/hugo-theme-bootstrap/layouts/partials/ext.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/ext.html
@@ -1,6 +1,4 @@
-<div class="tool-container">
+<div class="tool-container container-fluid">
     {{- .Content -}}
 </div>
-<div>
-  {{- partial "post/comments" . -}}
-</div>
+{{- partial "post/comments" . -}}
