--- a/themes/hugo-theme-bootstrap/src/scss/_tools.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_tools.scss
@@ -23,7 +23,7 @@
     }
 }
 
-.tool-container {
-    padding-left: 0;
-    padding-right: 0;
+.tool-main .post-comments{
+    margin-left: calc(var(--bs-gutter-x) * .5);
+    margin-right: calc(var(--bs-gutter-x) * .5);
 }
