--- a/themes/hugo-theme-bootstrap/layouts/partials/sidebar/main.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/sidebar/main.html
@@ -1,4 +1,5 @@
 {{- partial "sidebar/profile" . -}}
 {{- partial "sidebar/featured-posts" . -}}
 {{- partial "sidebar/recent-posts" . -}}
+{{- partial "sidebar/document" . -}}
 {{- partial "sidebar/taxonomies" . -}}
