--- a/themes/hugo-theme-bootstrap/src/scss/_variables.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_variables.scss
@@ -2,3 +2,4 @@ $form-range-thumb-bg: var(--hbs-accent);
 $fa-font-path: "../fonts";
 $enable-smooth-scroll: false;
 $content-padding: 0.75rem;
+$aside-padding: 0.75rem;
