--- a/themes/hugo-theme-bootstrap/src/scss/_main.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_main.scss
@@ -82,6 +82,7 @@ table {
 
 main {
   margin-bottom: 2rem;
+  margin-top: 70px!important;
 }
 
 ul {
@@ -91,7 +92,7 @@ ul {
 .surface {
   background-color: var(--hbs-surface);
   color: var(--hbs-on-surface);
-  padding: 1rem;
+  padding: 0.5rem 0;
   border-bottom: 1px solid var(--hbs-shadow);
 }
 
