--- a/themes/hugo-theme-bootstrap/layouts/partials/hooks/content-end.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/hooks/content-end.html
@@ -1,5 +1,7 @@
 <hr/>
-公众号“潇洒哥和黑大帅”，如果喜欢就关注下，可以更快找到我。
-<div style="text-align: center;">
-<img src="{{ absURL "images/weixin.jpg" }}"/>
+<div class="post-content">
+    公众号“潇洒哥和黑大帅”，如果喜欢就关注下，可以更快找到我。
+    <div style="text-align: center;">
+    <img src="{{ absURL "images/weixin.jpg" }}"/>
+    </div>
 </div>
