--- a/themes/hugo-theme-bootstrap/layouts/partials/footer/social-links.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/footer/social-links.html
@@ -45,11 +45,11 @@
     {{- end -}}
   {{- end -}}
 {{- end -}}
-  <!-- {{- with .OutputFormats.Get "rss" -}}
+  {{- with .OutputFormats.Get "rss" -}}
   <li class="nav-item">
     <a class="nav-link social-link" target="_blank" href="{{ .Permalink }}" title="RSS">
       <i class="fas fa-fw fa-2x fa-rss"></i>
     </a>
   </li>
-  {{- end -}} -->
+  {{- end -}}
 </nav>
