--- a/themes/hugo-theme-bootstrap/layouts/partials/list.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/list.html
@@ -20,7 +20,7 @@
         <h3 class="post-title mb-4"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
         {{- partial "post/meta" . -}}
         <div class="post-summary mb-3">
-          {{- .Summary | truncate 100 -}}...
+          {{- .Summary | truncate 100 -}}
         </div>
       </div>
     </article>
