--- a/themes/hugo-theme-bootstrap/layouts/partials/sidebar/profile.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/sidebar/profile.html
@@ -1,9 +1,9 @@
 {{- with .Site.Author -}}
-<section class="profile surface row">
-  <div class="col-xl-6 d-flex align-items-center justify-content-center">
+<section class="profile surface row d-none d-sm-flex">
+  <div class="col-xl-4 d-flex none align-items-center justify-content-center">
     <img class="profile-avatar img-fluid" src="{{ absURL (default "images/profile.webp" .avatar) }}" alt="{{ .name }}" loading="lazy">
   </div>
-  <div class="col-xl-6">
+  <div class="col-xl-8">
     <h5 class="profile-name my-2">{{ .name }}</h5>
     {{- with .bio -}}
     <div class="profile-bio mb-2">{{ . }}</div>
