--- a/themes/hugo-theme-bootstrap/layouts/_default/search.html
+++ b/themes/hugo-theme-bootstrap/layouts/_default/search.html
@@ -44,10 +44,10 @@
   </div>
 </div>
 <script type="text/html" id="templateResult">
-  <div class="search-result surface" id="{{ print "{{id}}" }}">
-    <h2 class="search-result-title mb-2">
+  <div class="search-result surface row" id="{{ print "{{id}}" }}">
+    <h3 class="search-result-title mb-2">
       <a {{ printf "href={{permalink}}" | safeHTMLAttr }}>{{ print "{{title}}" }}</a>
-    </h2>
+    </h3>
     <div class="search-result-taxonomies mb-3">
       <span class="search-result-score search-result-taxonomy">
         <span {{ printf "style=\"%s\"" "width: {{{score}}}%" | safeHTMLAttr }}></span>
