--- a/themes/hugo-theme-bootstrap/src/scss/_tools.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_tools.scss
@@ -23,6 +23,10 @@
     }
 }
 
+.tool-main {
+    margin-top: 0;
+}
+
 .tool-main .post-comments{
     margin-left: calc(var(--bs-gutter-x) * .5);
     margin-right: calc(var(--bs-gutter-x) * .5);
