--- a/themes/hugo-theme-bootstrap/src/scss/_tools.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_tools.scss
@@ -1,3 +1,24 @@
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: #fff;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background-color: rgba(200, 200, 200, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: rgba(144, 146, 152, 0.5);
+    transition: background-color 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(144, 146, 152, 0.5);
+}
+
 .toollist .block-list {
     background-color: var(--hbs-surface);
     border-radius: .25rem;
@@ -25,9 +46,32 @@
 
 .tool-main {
     margin-top: 8px;
+    .post-comments{
+        margin-left: calc(var(--bs-gutter-x) * .5);
+        margin-right: calc(var(--bs-gutter-x) * .5);
+    }
 }
 
-.tool-main .post-comments{
-    margin-left: calc(var(--bs-gutter-x) * .5);
-    margin-right: calc(var(--bs-gutter-x) * .5);
+
+.t-btn {
+	padding-top: 8px;
+    .btn {
+        width: 100px;
+        height: 40px;
+        margin: 0 8px;
+    }
+}
+.t-editarea {
+	height: 90vh;
+    .t-textarea {
+        height: 90%;
+    }
+    * {
+        font-family: -apple-system-font,BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB , Microsoft YaHei UI , Microsoft YaHei ,Arial,sans-serif;
+    }
+}
+
+
+#input>div, #output>div{
+	height: 100%;
 }
