--- a/themes/hugo-theme-bootstrap/layouts/partials/sidebar/profile.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/sidebar/profile.html
@@ -15,10 +15,10 @@
     <div class="profile-location mb-2"><i class="fas fa-fw fa-map-marker-alt"></i>{{ . }}</div>
     {{- end -}}
     {{- if .about -}}
-      <div class="profile-about mb-2"><i class="fas fa-fw fa-info-circle"></i><a target="_blank" href="{{ .about }}">{{ i18n "about_me" }}</a></div>
+      <div class="profile-about mb-2"><i class="fas fa-fw fa-user"></i><a target="_blank" href="{{ .about }}">{{ i18n "about_me" }}</a></div>
     {{- else -}}
       {{- with $.GetPage "about" -}}
-      <div class="profile-about mb-2"><i class="fas fa-fw fa-info-circle"></i><a href="{{ .Permalink }}">{{ .Title }}</a></div>
+      <div class="profile-about mb-2"><i class="fas fa-fw fa-user"></i><a href="{{ .Permalink }}">{{ .Title }}</a></div>
       {{- end -}}
     {{- end -}}
   </div>
