--- a/themes/hugo-theme-bootstrap/layouts/_default/list.html
+++ b/themes/hugo-theme-bootstrap/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<div class="col-lg-9">
+<div class="col-lg-7 offset-lg-1">
   {{ partial "list" . }}
 </div>
 {{- partial "sidebar" . -}}
