--- a/themes/hugo-theme-bootstrap/layouts/_default/search.html
+++ b/themes/hugo-theme-bootstrap/layouts/_default/search.html
@@ -27,7 +27,7 @@
 {{ end }}
 
 {{ define "content" }}
-<div class="search container">
+<div class="search container col-lg-10 offset-lg-1">
   <form id="searchForm" class="search-form mb-3">
     <div class="input-group input-group-lg">
       <button class="btn btn-search disabled position-absolute left-0" type="submit"><i class="fas fa-fw fa-search"></i></button>
