--- a/themes/hugo-theme-bootstrap/layouts/_default/single.html
+++ b/themes/hugo-theme-bootstrap/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<div class="col-lg-9">
+<div class="col-lg-7 offset-lg-1">
   <div class="container content-post">
     {{- partial "breadcrumb" . -}}
     {{- partial "post" . -}}
