增加精选文章和公众号二维码位置调整

--- a/themes/hugo-theme-bootstrap/src/scss/_sidebar.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_sidebar.scss
@@ -11,9 +11,17 @@
     padding-left: $aside-padding;
     padding-right: $aside-padding;
   }
+
+  .wx-sub-account {
+    text-align: center;
+    img {
+      width: 80%;
+    }
+  }
 }
 
 .sidebar ul li,
 .post-taxonomy {
   color: var(--hbs-secondary-text);
 }
+
