--- a/themes/hugo-theme-bootstrap/layouts/partials/list.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/list.html
@@ -16,7 +16,11 @@
       <div class="post-thumbnail col-md-3 d-flex align-items-center justify-content-center">
         <img class="img-fluid" src="{{ index .Params.Images 0 | absURL }}" loading="lazy"/>
       </div>
-      {{- end -}}
+      <div class="post-body{{ if .Params.Images }} col-md-9{{ end }}">
+        <h5 class="post-title mb-4"><a href="{{ .Permalink }}">{{ .Title }}</a></h5>
+        {{- partial "post/meta" . -}}
+      </div>
+      {{- else -}}
       <div class="post-body{{ if .Params.Images }} col-md-9{{ end }}">
         <h5 class="post-title mb-4"><a href="{{ .Permalink }}">{{ .Title }}</a></h5>
         {{- partial "post/meta" . -}}
@@ -24,6 +28,7 @@
           {{- .Summary | truncate 100 -}}
         </div>
       </div>
+      {{- end -}}
     </article>
     {{- end -}}
   {{- end -}}
