fix: 工具文档页增加强制换行

--- a/themes/hugo-theme-bootstrap/src/scss/_tools.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/_tools.scss
@@ -36,6 +36,7 @@
         border-radius: 8px;
         background-color: var(--hbs-surface);
         color: var(--hbs-on-surface);
+        word-break: break-all;
     }
 }
 
