--- a/themes/hugo-theme-bootstrap/src/scss/markdown/default.scss
+++ b/themes/hugo-theme-bootstrap/src/scss/markdown/default.scss
@@ -1,7 +1,7 @@
 .post-content {
     h2 {
         font-size: 24px;
-        border-bottom: 1px solid #ececec;
+        border-bottom: 1px solid var(--hbs-head-underline);
         padding-bottom: 12px;
     }
     h3 {
