--- a/themes/hugo-theme-bootstrap/layouts/partials/list.html
+++ b/themes/hugo-theme-bootstrap/layouts/partials/list.html
@@ -1,7 +1,7 @@
 {{- $pages := (.Paginate .RegularPagesRecursive).Pages -}}
 {{- if .IsHome -}}
-  {{- $sections := default (slice "posts") .Site.Params.mainSections -}}
-  {{- $pages = where (.Paginate .Site.RegularPages).Pages "Type" "in" $sections -}}
+{{- $sections := default (slice "posts") .Site.Params.mainSections -}}
+{{- $pages = where (.Paginate .Site.RegularPages).Pages "Type" "in" $sections -}}
 {{- else -}}
 {{- partial "breadcrumb" . -}}
 {{- partial "sections" . -}}
@@ -12,7 +12,8 @@
 <article class="post row surface content-block">
   {{- if .Params.Images -}}
   <div class="post-thumbnail col-md-3 d-flex align-items-center justify-content-center">
-    <img class="img-fluid img-block" src="{{ index .Params.Images 0 | absURL }}" loading="lazy"/>
+    <img class="img-fluid img-block" referrer="no-referrer|origin|unsafe-url"
+      src="{{ index .Params.Images 0 | absURL }}" loading="lazy" />
   </div>
   <div class="post-body{{ if .Params.Images }} col-md-9{{ end }}">
     <h5 class="post-title mb-4"><a href="{{ .Permalink }}">{{ .Title }}</a></h5>
@@ -32,4 +33,3 @@
 {{- end -}}
 {{- partial "hooks/list-end" . -}}
 {{- partial "pagination" . -}}
-
