--- a/themes/hugo-theme-bootstrap/layouts/index.html
+++ b/themes/hugo-theme-bootstrap/layouts/index.html
@@ -1,5 +1,8 @@
 {{ define "content" }}
 <div class="col-lg-7 offset-lg-1 content-post">
+  <article class="post row surface content-block">
+    <a href="https://laomiao.site" style="font-size: 1.3rem;">我的新站：https://LaoMiao.site</a>
+  </article>
   {{ partial "list" . }}
 </div>
 {{- partial "sidebar" . -}}
@@ -8,7 +11,7 @@
 {{ define "title" }}
 {{- $pageNumber := "" -}}
 {{- if gt .Paginator.PageNumber 1 -}}
-  {{- $pageNumber = printf " %s" (i18n "pagination_title" .Paginator) -}}
+{{- $pageNumber = printf " %s" (i18n "pagination_title" .Paginator) -}}
 {{- end -}}
 {{- printf "%s%s" .Site.Title $pageNumber -}}
 {{ end }}
