--- a/themes/hugo-theme-bootstrap/layouts/index.html
+++ b/themes/hugo-theme-bootstrap/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
 <div class="col-lg-7 offset-lg-1 content-post">
   <article class="post row surface content-block">
-    <a href="https://laomiao.site" style="font-size: 1.3rem;">我的新站：https://LaoMiao.site</a>
+    <a href="https://printlove.cn" style="font-size: 1.3rem;">网站新主题：https://printlove.cn</a>
   </article>
   {{ partial "list" . }}
 </div>
